# personal-agent

./: .gitignore  .pre-commit-config.yaml  .pylintrc  check.sh  generate_subsystem_docs.py  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: 0-feature-develop-process.mdc  1-acceptance-test-framework-generator.mdc  2-user-interaction-design.mdc  3-acceptance-test-case-generator.mdc  4-function-realization-design.html  5-subsystem-interface-design.mdc  6-interface-realization.mdc  7- interface-test.mdc  8-system_dependency_composition.mdc  acceptance_test.mdc  function-design.mdc  interface-design.mdc  interface_definition.mdc  interface_test.mdc  requirement-and-accptance-test-rule.mdc  rules_list.mdc
.poc/: mcp-connection.py
.prompt/: senario-and-prompt.md
config/: config.yaml
docs/: dev_guide.md  mcp_module_design.md
docs/design/: overall_design.md  subsystems_responsbility.md
docs/dev-prompt/: ac_test_guide_bak.md  accptence_test_guide.md  design.md  dev_test.md  feature_dev.md  funciton_design.md  interface_design_and_test.mdc  interface_test_prompt.md  test.md
docs/dev_rules/: acceptance_test.md  development_rules_list.md  interface-design-and-test-rule.mdc  interface_definition.md  system_dependency.md
docs/requirement/: req_and_ac.md
docs/smart_dev/: executable_arch.md
docs/system_design/: mcp_design.md  overall_design.md  subsystems_responsbility.md
req_and_test/: conftest.py
req_and_test/acceptance/: conftest.py  test_cli_basic.py  test_llm_chat.py
src/: __init__.py  code_arch.md  main.py
src/cli/: cli.py  (+1 more)
tests/: conftest.py
(+47 files in other folders)
